# internal/handler/quiz_handler.go
@@ -52,7 +52,7 @@ func (h *QuizHandler) StartQuiz(c *fiber.Ctx) error {
 	attempt, quiz, deadline, questions, err := h.service.StartQuiz(c.Context(), quizID, userID)
 	if err != nil {
 		if err.Error() == "max attempts exceeded" {
-			return Fail(c, fiber.StatusForbidden, "maximum attempts reached")
+			return Fail(c, fiber.StatusForbidden, "max attempts reached")
 		}
 		return Fail(c, fiber.StatusInternalServerError, "failed to start quiz")
 	}
@@ -64,4 +64,74 @@ func (h *QuizHandler) StartQuiz(c *fiber.Ctx) error {
 		"duration":   quiz.DurationSeconds,
 		"questions":  questions,
 	})
+}
+
+type submitRequest struct {
+	AttemptID        string  `json:"attempt_id"`
+	QuestionID       string  `json:"question_id"`
+	SelectedOptionID *string `json:"selected_option_id,omitempty"`
+	EssayAnswer      *string `json:"essay_answer,omitempty"`
+	Final            bool    `json:"final"`
+}
+
+// SubmitAnswer godoc
+// @Summary Submit or autosave quiz answer
+// @Description Autosave answer per question or finalize quiz submission.
+// @Description Multiple choice answers are auto-graded.
+// @Description Essay answers will be marked as waiting assessment.
+// @Tags Quiz
+// @Accept json
+// @Produce json
+// @Param request body submitRequest true "Submit answer payload"
+// @Success 200 {object} handler.APIResponse "Answer saved or quiz submitted"
+// @Failure 400 {object} handler.APIResponse "Invalid request or validation error"
+// @Failure 403 {object} handler.APIResponse "Attempt expired"
+// @Failure 409 {object} handler.APIResponse "Attempt already submitted"
+// @Failure 500 {object} handler.APIResponse "Internal server error"
+// @Router /submit [post]
+func (h *QuizHandler) Submit(c *fiber.Ctx) error {
+	var req submitRequest
+	if err := c.BodyParser(&req); err != nil {
+		return Fail(c, fiber.StatusBadRequest, "invalid request body")
+	}
+
+	attemptID, _ := uuid.Parse(req.AttemptID)
+	questionID, _ := uuid.Parse(req.QuestionID)
+
+	var optionID *uuid.UUID
+	if req.SelectedOptionID != nil {
+		id, err := uuid.Parse(*req.SelectedOptionID)
+		if err != nil {
+			return Fail(c, fiber.StatusBadRequest, "invalid option id")
+		}
+
+		optionID = &id
+	}
+
+	err := h.service.SubmitAnswer(
+		c.Context(),
+		attemptID,
+		questionID,
+		optionID,
+		req.EssayAnswer,
+		req.Final,
+	)
+
+	if err != nil {
+		switch err.Error() {
+		case "attempt expired":
+			return Fail(c, fiber.StatusForbidden, err.Error())
+		case "attempt already submitted":
+			return Fail(c, fiber.StatusConflict, err.Error())
+		default:
+			return Fail(c, fiber.StatusBadRequest, err.Error())
+		}
+	}
+
+	msg := "answer saved"
+	if req.Final {
+		msg = "quiz submitted"
+	}
+
+	return Success(c, msg, nil)
 }
